# pyautomata

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt  sample.ipynb  setup.py
.github/workflows/: build.yml
nix/: apps.nix  devshells.nix  pythonPkgs.nix  rustPkg.nix  rustPkgs.nix  shell.nix
notebooks/: bugs.ipynb  perfomance.ipynb  recognition.ipynb  sample.ipynb
pyautomata/: __init__.py  classes.py  render.py  stats.py
pyautomata/classes/: __init__.py  automata.py  basecanvas.py  canvas.py  general.py  recognizer.py
pyautomata/handlers/: __init__.py  benchmark.py  concurrency.py  rust.py
pyautomata/rust/: Cargo.toml
pyautomata/rust/src/: lib.rs
tests/: common.py  test_classes.py  test_generation.py  test_recognizer.py
