[project]
name = "pyautomata"
version = "0.1.0"
description = "Generate Cellular Automata in Python and Rust to visualize in Jupyter"
authors = [
    {name = "Michael Buckley"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
