[project]
name = "pyautomata"
version = "0.1.1"
description = "Generate Cellular Automata in Python and Rust to visualize in Jupyter"
authors = [
    {name = "Michael Buckley"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
]
